Fix: bug for delete function & layout problem

--- a/css/admin_diet.css
+++ b/css/admin_diet.css
@@ -30,7 +30,7 @@ body {
     align-items: center;
     margin: 0 auto;
     position: absolute;
-    left: 0 !important;
+    left: auto !important;
     margin-left: 320px !important;
     transform: translateX(-50%);
 }
@@ -45,8 +45,24 @@ body {
     position: relative;
 }
 
-.nav-links a.active{
+.admin-dashboard,
+.admin-workout,
+.admin-user {
+    margin-top: 5px;
+    cursor: pointer;
+    font-size: 80%;
+}
+
+.admin-meals a {
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 20px;
+    font-size: 12px;
+    border-radius: 68px;
     color: white;
+    cursor: pointer;
 }
 /* user section */
 .meal-section {
@@ -481,27 +497,18 @@ textarea {
 }
 
 @media screen and (max-width: 832px) {
-    .nav-links {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 50px;
-        background: var(--background-color);
-        overflow: hidden;
-        transition: max-height 0.5sease-in-out, opacity 0.3sease-out;
-        opacity: 0;
-        visibility: hidden;
-        margin-top: 20px !important;
-        z-index: 11;
-        padding-top: 70px !important;
-        margin-left: 300px !important;
-    }
-
     .navbar {
         padding: 1.5rem 0 !important;
         margin-left: 30px;
+    }
+
+    .header-right {
+        margin-left: 15px;
+    }
+
+    .nav-links {
+        margin-left: 0 !important;
+        left: 50% !important;
     }
 
     .edit-profile {
@@ -511,13 +518,6 @@ textarea {
 
 
 @media (max-width: 768px) {
-    .nav-links {
-        flex-direction: column;
-    }
-
-    .nav-links li {
-        margin-bottom: 10px;
-    }
 
     .navbar {
         padding: 1.5rem 0 !important;
@@ -561,11 +561,6 @@ textarea {
 }
 
 @media (max-width: 480px) {
-    nav {
-        flex-direction: column;
-        text-align: center;
-    }
-
     .nav-links {
         flex-direction: column;
     }
